--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-canvas-draw": "^1.1.1",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
